# FullStackChattingDemo

./: .gitmodules  CMakeLists.txt  README.md  addusernamecardwidget.h  chattingcontactitem.cpp  chattingcontactlist.cpp  chattingdlgmainframe.cpp  chattinghistorywidget.cpp  chattinghistorywidget.h  chattingmsgitem.h  countdownbutton.cpp  countdownbutton.h  def.hpp  httpnetworkconnection.cpp  logininterface.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgbubblebase.cpp  registerinterface.cpp  registerinterface.h  resetpasswdinterface.ui  resources.qrc  tcpnetworkconnection.cpp  tcpnetworkconnection.h  tools.h
balance-server/: .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.ini
balance-server/proto/: message.proto
balance-server/src/: GrpcBalancerImpl.cpp  RedisContextRAII.cpp  main.cpp
captcha-server/: README.md  defs.js  email.js  index.js  package-lock.json  package.json  proto.js  redis.js  verificationserver.js
chatting-client/: CMakeLists.txt  ChattingHistory.cpp  ChattingHistory.hpp  MsgNode.hpp  README.md  UserFriendRequest.hpp  UserNameCard.h  addnewuserstackwidget.cpp  addnewuserstackwidget.h  addnewuserstackwidget.ui  addnewuserwidget.ui  addusernamecarddialog.h  addusernamecarddialog.ui  addusernamecardwidget.cpp  addusernamecardwidget.h  addusernamecardwidget.ui  adduserrequestdialog.cpp  adduserrequestdialog.ui  authenticatenewfriendrequestdialog.cpp  authenticatenewfriendrequestdialog.h  authenticatenewfriendrequestdialog.ui  chattingcontactitem.cpp  chattingcontactitem.h  chattingcontactlist.cpp  chattingcontactlist.h  chattingdlgmainframe.cpp  chattingdlgmainframe.h  chattingdlgmainframe.ui  chattinghistorywidget.cpp  chattinghistorywidget.h  chattinghistorywidget.ui  chattingrecordview.cpp  chattingrecordview.h  chattingstackpage.cpp  chattingstackpage.h  chattingstackpage.ui  config.ini  contactsprofile.cpp  contactsprofile.h  contactsprofile.ui  (+27 more)
chatting-server/: .gitmodules  CMakeLists.txt  Dockerfile  config.ini
chatting-server/include/config/: ServerConfig.hpp
chatting-server/include/grpc/: BalanceServicePool.hpp  DistributedChattingServicePool.hpp  GrpcBalanceService.hpp  GrpcDistributedChattingImpl.hpp  GrpcDistributedChattingService.hpp
chatting-server/include/handler/: SyncLogic.hpp
chatting-server/include/message/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
chatting-server/include/network/: def.hpp
chatting-server/include/redis/: RedisContextRAII.hpp
chatting-server/include/server/: AsyncServer.hpp  MsgNode.hpp  Session.hpp  UserFriendRequest.hpp  UserManager.hpp  UserNameCard.hpp
chatting-server/include/service/: ConnectionPool.hpp
chatting-server/include/sql/: MySQLConnection.hpp
chatting-server/include/tools/: tools.hpp
chatting-server/proto/: message.proto
chatting-server/src/: AsyncServer.cpp  GrpcBalanceService.cpp  GrpcDistributedChattingImpl.cpp  GrpcDistributedChattingService.cpp  IOServicePool.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  RedisContextRAII.cpp  RedisReplyRAII.cpp  Session.cpp  SyncLogic.cpp  UserManager.cpp  main.cpp
client/: CMakeLists.txt  MsgNode.hpp  UserNameCard.h  addnewuserstackwidget.cpp  addnewuserstackwidget.h  addnewuserwidget.cpp  addnewuserwidget.h  addusernamecarddialog.cpp  addusernamecarddialog.h  addusernamecarddialog.ui  addusernamecardwidget.cpp  addusernamecardwidget.h  addusernamecardwidget.ui  adduserrequestdialog.cpp  adduserrequestdialog.h  adduserrequestdialog.ui  buttondisplayswitching.cpp  buttondisplayswitching.h  chattingcontactitem.cpp  chattingcontactitem.h  chattingcontactitem.ui  chattingcontactlist.cpp  chattingcontactlist.h  chattingdlgmainframe.cpp  chattingdlgmainframe.h  chattingdlgmainframe.ui  chattinghistorywidget.cpp  chattinghistorywidget.h  chattingmsgitem.cpp  chattingmsgitem.h  chattingpagewidget.cpp  chattingpagewidget.h  chattingpagewidget.ui  chattingrecordview.cpp  chattingrecordview.h  chattingstackpage.cpp  chattingstackpage.h  chattingstackpage.ui  chattinguserlists.cpp  chattinguserlists.h  (+64 more)
client/style/: theme.qss
gateway-server/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.ini
gateway-server/proto/: message.proto
gateway-server/src/: GateServer.cpp  HandleMethod.cpp  HttpConnection.cpp  IOServicePool.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  RedisContextRAII.cpp  ServerConfig.cpp  main.cpp
include/config/: ServerConfig.hpp
include/grpc/: DistributedChattingServicePool.hpp  GrpcBalancerImpl.hpp  (+1 more)
resources-server/: CMakeLists.txt  README.md
resources-server/include/handler/: SyncLogic.hpp
resources-server/include/server/: MsgNode.hpp
resources-server/include/tools/: tools.hpp
resources-server/src/: AsyncServer.cpp  Session.cpp  SyncLogic.cpp
server/: CMakeLists.txt  config.ini
server/include/config/: ServerConfig.hpp
server/include/grpc/: GrpcVerificationService.hpp  StubPool.hpp  VerificationServicePool.hpp
server/include/handler/: HandleMethod.hpp
server/include/http/: HttpConnection.hpp
server/include/message/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
server/include/network/: def.hpp
server/include/redis/: RedisContextRAII.hpp  RedisManager.hpp  RedisReplyRAII.hpp
server/include/server/: GateServer.hpp  session.hpp
server/include/service/: ConnectionPool.hpp  IOServicePool.hpp
server/include/singleton/: singleton.hpp
server/include/sql/: MySQLConnection.hpp  MySQLConnectionPool.hpp  MySQLManagement.hpp
server/include/tools/: tools.hpp
server/proto/: message.proto
server/src/: GateServer.cpp  GrpcVerificationService.cpp  HandleMethod.cpp  HttpConnection.cpp  IOServicePool.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  MySQLManagement.cpp  RedisContextRAII.cpp  RedisManager.cpp  RedisReplyRAII.cpp  ServerConfig.cpp  StubPool.cpp  VerificationServicePool.cpp  main.cpp  session.cpp
server/verification-server/: config.js  config.json  package-lock.json  package.json  verificationserver.js
src/: HandleMethod.cpp  MySQLConnectionPool.cpp  main.cpp
style/: theme.qss
(+34 files in other folders)
